crates/pg_syntax/tests/snapshots/postgres_regress/join@230.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create type mycomptype as (id int, v bigint);"
---
CompositeTypeStmt@0..45
  Create@0..6 "create"
  Whitespace@6..7 " "
  TypeP@7..11 "type"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "mycomptype"
  Whitespace@22..23 " "
  As@23..25 "as"
  Whitespace@25..26 " "
  Ascii40@26..27 "("
  ColumnDef@27..33
    Ident@27..29 "id"
    Whitespace@29..30 " "
    TypeName@30..33
      IntP@30..33 "int"
  Ascii44@33..34 ","
  Whitespace@34..35 " "
  ColumnDef@35..43
    Ident@35..36 "v"
    Whitespace@36..37 " "
    TypeName@37..43
      Bigint@37..43 "bigint"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

