crates/pg_syntax/tests/snapshots/postgres_regress/join@241.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select t1.q2, count(t2.*)\nfrom int8_tbl t1 left join\n  (select q1, case when q2=1 then 1 else q2 end as q2 from int8_tbl) t2\n  on (t1.q2 = t2.q1)\ngroup by t1.q2 order by 1;"
---
SelectStmt@0..172
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..12
    ColumnRef@7..12
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..12 "q2"
  Ascii44@12..13 ","
  Whitespace@13..14 " "
  ResTarget@14..24
    FuncCall@14..24
      Ident@14..19 "count"
      Ascii40@19..20 "("
      ColumnRef@20..24
        Ident@20..22 "t2"
        Ascii46@22..23 "."
        AStar@23..24
          Ascii42@23..24 "*"
  Ascii41@24..25 ")"
  Newline@25..26 "\n"
  From@26..30 "from"
  Whitespace@30..31 " "
  JoinExpr@31..144
    RangeVar@31..42
      Ident@31..39 "int8_tbl"
      Whitespace@39..40 " "
      Alias@40..42
        Ident@40..42 "t1"
    Whitespace@42..43 " "
    Left@43..47 "left"
    Whitespace@47..48 " "
    Join@48..52 "join"
    Newline@52..53 "\n"
    Whitespace@53..55 "  "
    Ascii40@55..56 "("
    RangeSubselect@56..124
      SelectStmt@56..120
        Select@56..62 "select"
        Whitespace@62..63 " "
        ResTarget@63..65
          ColumnRef@63..65
            Ident@63..65 "q1"
        Ascii44@65..66 ","
        Whitespace@66..67 " "
        ResTarget@67..106
          CaseExpr@67..100
            Case@67..71 "case"
            Whitespace@71..72 " "
            CaseWhen@72..88
              When@72..76 "when"
              Whitespace@76..77 " "
              AExpr@77..81
                ColumnRef@77..79
                  Ident@77..79 "q2"
                Ascii61@79..80 "="
                AConst@80..81
                  Iconst@80..81 "1"
              Whitespace@81..82 " "
              Then@82..86 "then"
              Whitespace@86..87 " "
              AConst@87..88
                Iconst@87..88 "1"
            Whitespace@88..89 " "
            Else@89..93 "else"
            Whitespace@93..94 " "
            ColumnRef@94..96
              Ident@94..96 "q2"
            Whitespace@96..97 " "
            EndP@97..100 "end"
          Whitespace@100..101 " "
          As@101..103 "as"
          Whitespace@103..104 " "
          Ident@104..106 "q2"
        Whitespace@106..107 " "
        From@107..111 "from"
        Whitespace@111..112 " "
        RangeVar@112..120
          Ident@112..120 "int8_tbl"
      Ascii41@120..121 ")"
      Whitespace@121..122 " "
      Alias@122..124
        Ident@122..124 "t2"
    Newline@124..125 "\n"
    Whitespace@125..127 "  "
    On@127..129 "on"
    Whitespace@129..130 " "
    Ascii40@130..131 "("
    AExpr@131..144
      ColumnRef@131..136
        Ident@131..133 "t1"
        Ascii46@133..134 "."
        Ident@134..136 "q2"
      Whitespace@136..137 " "
      Ascii61@137..138 "="
      Whitespace@138..139 " "
      ColumnRef@139..144
        Ident@139..141 "t2"
        Ascii46@141..142 "."
        Ident@142..144 "q1"
  Ascii41@144..145 ")"
  Newline@145..146 "\n"
  GroupP@146..151 "group"
  Whitespace@151..152 " "
  By@152..154 "by"
  Whitespace@154..155 " "
  ColumnRef@155..160
    Ident@155..157 "t1"
    Ascii46@157..158 "."
    Ident@158..160 "q2"
  Whitespace@160..161 " "
  SortBy@161..171
    Order@161..166 "order"
    Whitespace@166..167 " "
    By@167..169 "by"
    Whitespace@169..170 " "
    AConst@170..171
      Iconst@170..171 "1"
  Ascii59@171..172 ";"

