crates/pg_syntax/tests/snapshots/postgres_regress/join@246.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into a (code) values ('p');"
---
InsertStmt@0..34
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..13
    Ident@12..13 "a"
  Whitespace@13..14 " "
  Ascii40@14..15 "("
  ResTarget@15..19
    Ident@15..19 "code"
  Ascii41@19..20 ")"
  Whitespace@20..21 " "
  SelectStmt@21..32
    Values@21..27 "values"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..32
      AConst@29..32
        Sconst@29..32 "'p'"
  Ascii41@32..33 ")"
  Ascii59@33..34 ";"

