crates/pg_syntax/tests/snapshots/postgres_regress/join@252.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into c (name, a) values ('C', null);"
---
InsertStmt@0..43
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..13
    Ident@12..13 "c"
  Whitespace@13..14 " "
  Ascii40@14..15 "("
  ResTarget@15..19
    NameP@15..19 "name"
  Ascii44@19..20 ","
  Whitespace@20..21 " "
  ResTarget@21..22
    Ident@21..22 "a"
  Ascii41@22..23 ")"
  Whitespace@23..24 " "
  SelectStmt@24..41
    Values@24..30 "values"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..41
      AConst@32..35
        Sconst@32..35 "'C'"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      AConst@37..41
        NullP@37..41 "null"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

